--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -92,6 +92,7 @@ header {
   .theme-btn {
     width: 40px;
     height: 40px;
+    border: none;
     background: url("../assets/theme-moon.svg") no-repeat center / 24px;
     cursor: pointer;
 
