--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -34,7 +34,7 @@ body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  line-height: 1.5;
+  line-height: normal;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
@@ -65,6 +65,9 @@ button,
 textarea,
 select {
   font: inherit;
+}
+button {
+  border: none;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
