--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -263,10 +263,8 @@ $orange-color: #e57542;
       margin-bottom: 15px;
     }
 
-    .item {
-      .text {
-        text-decoration: line-through;
-      }
+    .list-products__item-text {
+      text-decoration: line-through;
     }
   }
 }
